heatmaply 1.0.0 (2019-07-19)
===============

## NEW FEATURES 
* heatmaply
  - The argument show_dendrogram controls whether to display the row and 
    column dendrograms. This allows the user to display a clustered heatmap 
    without displaying the dendrograms used to cluster the data.

## BUGFIXES
* heatmaply
  - Legends are no longer shown for the row/column dendrogram traces when
    plot_method = "ggplot".
  - cellnote would be placed outwith the heatmap when plot_method = "ggplot"
  - showticklabels applies when row_dend_left=TRUE and plot_method="plotly"
  - fontsize_row and fontsize_col apply to side colour plots as well
    as the main plot axes.
  - cellnote did not work properly in some cases.
  - grid_gap now works for side colour plots with plot_method="plotly".

###OTHER NOTES
- Started using pkgdown :)

heatmaply 0.16.0 (2019-05-10)
===============

## NEW FEATURES
* heatmaply
  - The boolean argument dend_hoverinfo can control whether hoverinfo is shown
    for the row and column dendrograms.
## BUGFIXES
* heatmaply
  - Supplying label_names could cause incorrect orientation of side colors
  - Using plot_method="plotly" could cause incorrect interpretation of colour
    strings.
  - custom_hovertext did not work when plot_method="plotly"
  - Remove collaborate option internally (would cause warnings to be issued)
## NOTES
* heatmaply
  - Use `plotly::orca` for saving to file, rather than `plotly::export`
* Alan O'Callaghan is now recognized in the DESCRIPTION as a co-author of the package, in recognition to his significant (continuous) contribution to the package and the community. Thanks for everything Alan!

heatmaply 0.15.2 (2018-07-06)
===============

## BUGFIXES
* heatmaply
  - labels did not show (only numbers)


heatmaply 0.15.0 (2018-06-23)
===============

## NEW FEATURES
* heatmaply
  - Side colour plot legends will now have the title of the column when there is only one column used.
## BUGFIXES
* heatmaply