@@ -97,6 +97,9 @@ is.plotly <- function(x) {
 #' Can accept alternative character strings indicating the
 #' method to be passed to hclustfun By default hclustfun is \link{hclust} hence
 #' this can be one of "ward.D", "ward.D2", "single", "complete", "average" (= UPGMA), "mcquitty" (= WPGMA), "median" (= WPGMC) or "centroid" (= UPGMC).
+#' Specifying hclust_method=NA causes heatmaply to use 
+#' \code{\link[dendextend]{find_dend}} to find the "optimal" dendrogram for
+#' the data.
 #'
 #' @param distfun_row distfun for row dendrogram only.
 #' @param hclustfun_row hclustfun for col dendrogram only.
@@ -578,7 +581,7 @@ heatmaply.default <- function(x,
                               dend_hoverinfo = TRUE) {
   if (!missing(long_data)) {
     if (!missing(x)) {
-      warning("x and long_data should not be used together")
+      stop("x and long_data should not be used together")
     }
     assert_that(
       ncol(long_data) == 3,
